- OpenSwath: Fix bug in diaPASEF window determination (#7546)  

Misc:
- FileInfo: Report ion mobility ranges (if any) (#7459)
- OpenMSInfo reports the ILP solver (CoinOr or glpk) (#7156)
- add citation information for OpenMS 3.0 (Nat. Methods) (#7383)
- Add export for Common Workflow Language (CWL) (#6156)
- Add tool description lib (TDL) dependency (#6156)

Changed/new parameters: see CHANGELOG_PARAMS for details

Note: The goal of our library is to provide useful, reusable code in a way that’s easy to understand and use.
To make OpenMS simpler, more focused and more accessible we gradually remove potentially outdated tools and algorithms.
If you, as a user, are negatively affected by this step please contact us. We listen to our users and will try to find 
an alternative solution or reverse a particular decision for removal.

Cleanup/Removal:

- removed tools:
  - SpectraFilterMarkerMower -- Applies thresholdfilter to peak spectra (#7183)
  - FeatureFinderIsotopeWavelet -- Detects two-dimensional features in LC-MS data
  - PeakPickerWavelet -- Finds mass spectrometric peaks in profile mass spectra
  - PrecursorMassCorrector -- Corrects the precursor entries of MS/MS spectra, by using MS1 information
  - TOFCalibration -- Applies time of flight calibration
  - ERPairFinder -- Util which can be used to evaluate pair ratios on enhanced resolution (zoom) scans
  - RNPxlSearch -- Annotate RNA/DNA-peptide cross-links in MS/MS spectra
  - SpectraFilterSqrtMower -- Applies thresholdfilter to peak spectra
  - FeatureFinderMRM -- Detects two-dimensional features in LC-MS data
  - MapAlignerSpectrum -- Corrects retention time distortions between maps by spectrum alignment
  - ProteinResolver -- protein inference
  - SiriusAdapter -- Tool for metabolite identification using single and tandem mass spectrometry
  - SpectraFilterBernNorm -- Applies thresholdfilter to peak spectra
  - SpectraFilterScaler -- Applies thresholdfilter to peak spectra

- removed library code: